Add a Tab component Clean up Output component styles

--- a/static/global.css
+++ b/static/global.css
@@ -3,6 +3,7 @@
   --fg-color: #eeffff;
   --accent-color: #6eeb83;
 
+  --inactive-color: #545454;
   --border-color: #545454;
   --icon-color: #545454;
 
