--- a/packages/frontend/static/global.css
+++ b/packages/frontend/static/global.css
@@ -14,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--bg-color);
+  color: var(--fg-color);
   font-family: monospace;
 }
 
